[FEAT]: Review tools & language support (#23)
* feat: assert multi lang support + fix .git/ and _spec/ folder mounts

* fix: claudecode mount issues

* feat: support python venv